# sharpgrid-task

./: .env.template  .gitignore  README.md  conf.py  env.py  file_handler.py  filters.py  img2pdf.py  jpg2pdf.py  logger.py  main.py  pyproject.toml  scan_classes.py  shell.nix
data/: menu-1.json  menu-10.json  menu-11.json  menu-12.json  menu-2.json  menu-3.json  menu-4.json  menu-5.json  menu-6.json  menu-7.json  menu-8.json  menu-9.json
filters/: __init__.py  base.py  filter_classes.py  gpt_filter.py
output/: menu-1.csv  menu-10.csv  menu-12.csv  menu-2.csv  menu-3.csv  menu-4.csv  menu-5.csv  menu-6.csv  menu-7.csv  menu-8.csv  menu-9.csv
output_ai/: menu-1.csv  menu-10.csv  menu-11.csv  menu-12.csv  menu-2.csv  menu-3.csv  menu-4.csv  menu-5.csv  menu-6.csv  menu-7.csv  menu-8.csv  menu-9.csv
src/: conf.py  file_handler.py  logger.py  main.py  models.py
src/filters/: __init__.py  base.py  filter_classes.py
