[tool.poetry]
name = "sharpgrid-task"
version = "0.1.0"
description = ""
authors = ["Filip Krul <gvarph006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
pymupdf = "^1.22.5"
pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
